# mnist-cnn

./: .pre-commit-config.yaml  mlp_grad_clip.pt  pyproject.toml
cnn_mnist/: grad_clip.py  main.py
tests/: test_cnn_mnist.py
